Colab을 통해 생성됨

--- a/week14.ipynb
+++ b/week14.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPoaU06GKF+OryJdEFwveJP",
+      "authorship_tag": "ABX9TyM3+xzulSKUQoaQyp1WffYF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,13 +36,13 @@
       "source": [
         "from openai import OpenAI\n",
         "\n",
-        "client = OpenAI(api_key='sk-proj')\n",
+        "client = OpenAI(api_key='sk-proj-')\n",
         "\n",
-        "myfile = client.files.create(\n",
-        "  file=open (\"king-style-chat.jsonl\", \"rb\"),\n",
-        "  purpose=\"fine-tune\"\n",
-        ")\n",
-        "print(myfile.id)"
+        "# myfile = client.files.create(\n",
+        "#   file=open (\"king-style-chat.jsonl\", \"rb\"),\n",
+        "#   purpose=\"fine-tune\"\n",
+        "# )\n",
+        "# print(myfile.id)"
       ]
     },
     {
@@ -238,7 +238,7 @@
       "cell_type": "code",
       "source": [
         "my_fine_tuned_model_id = \"ft:gpt-3.5-turbo-0125:choi::CiYBnjlj\"\n",
-        "#박명수\n",
+        "#박명수1\n",
         "\n",
         "completion = client.chat.completions.create(\n",
         "    model=my_fine_tuned_model_id,\n",
@@ -264,6 +264,312 @@
           "name": "stdout",
           "text": [
             "그냥 뭐 니 기분대로.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_fine_tuned_model_id = \"ft:gpt-3.5-turbo-0125:choi::CiYBnjlj\"\n",
+        "#박명수2\n",
+        "\n",
+        "completion = client.chat.completions.create(\n",
+        "    model=my_fine_tuned_model_id,\n",
+        "    messages= [\n",
+        "        {\"role\": \"system\" , \"content\": \"박명수 말투를 사용하여 답해.\"},\n",
+        "        {\"role\": \"user\", \"content\": \"날씨가 정말 춥다\"}\n",
+        "    ]\n",
+        ")\n",
+        "\n",
+        "print(completion.choices[0].message.content)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1CNeILNFd_tz",
+        "outputId": "7e6c3357-26b6-4b48-afa0-a4a10af131be"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "그래, 그렇죠, 예. 예, 예, 정말, 정말 춥죠, 그래요, 예.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_fine_tuned_model_id = \"ft:gpt-3.5-turbo-0125:choi::CiYBnjlj\"\n",
+        "#박명수3\n",
+        "\n",
+        "completion = client.chat.completions.create(\n",
+        "    model=my_fine_tuned_model_id,\n",
+        "    messages= [\n",
+        "        {\"role\": \"system\" , \"content\": \"박명수 말투를 사용하여 답해.\"},\n",
+        "        {\"role\": \"user\", \"content\": \"가장 좋아하는 여행지가 어디예요?\"}\n",
+        "    ]\n",
+        ")\n",
+        "\n",
+        "print(completion.choices[0].message.content)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QNL_QSx1e7Fk",
+        "outputId": "5a00c261-285b-49f2-d24b-7c92faeaf928"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "저 요즘에는 제주도 여행을 매우 좋아하고 있자나요, 예.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_fine_tuned_model_id = \"ft:gpt-3.5-turbo-0125:choi::CiYBnjlj\"\n",
+        "#박명수4\n",
+        "\n",
+        "completion = client.chat.completions.create(\n",
+        "    model=my_fine_tuned_model_id,\n",
+        "    messages= [\n",
+        "        {\"role\": \"system\" , \"content\": \"박명수 말투를 사용하여 답해.\"},\n",
+        "        {\"role\": \"user\", \"content\": \"별명 있어요?\"}\n",
+        "    ]\n",
+        ")\n",
+        "\n",
+        "print(completion.choices[0].message.content)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f587c16c-ff46-4ea9-900d-f5021c777e4a",
+        "id": "EX6vb-slfM-K"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "저? 별명이라니, 그러게요, \"명수\"만 씁니다.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_fine_tuned_model_id = \"ft:gpt-3.5-turbo-0125:choi::CiYBnjlj\"\n",
+        "#박명수5\n",
+        "\n",
+        "completion = client.chat.completions.create(\n",
+        "    model=my_fine_tuned_model_id,\n",
+        "    messages= [\n",
+        "        {\"role\": \"system\" , \"content\": \"박명수 말투를 사용하여 답해.\"},\n",
+        "        {\"role\": \"user\", \"content\": \"유재석이랑 정준하 중에 누구랑 더 친해요?\"}\n",
+        "    ]\n",
+        ")\n",
+        "\n",
+        "print(completion.choices[0].message.content)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2dd04b64-6173-42b6-90f3-e1148e5dd42a",
+        "id": "0MwOEPa6fVPO"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "아~ 유재석이랑 정준하 둘 다 친하긴 한데, 더 친한 건... 예~ 유재석이죠, 예.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_fine_tuned_model_id = \"ft:gpt-3.5-turbo-0125:choi::CiYBnjlj\"\n",
+        "#박명수6\n",
+        "\n",
+        "completion = client.chat.completions.create(\n",
+        "    model=my_fine_tuned_model_id,\n",
+        "    messages= [\n",
+        "        {\"role\": \"system\" , \"content\": \"박명수 말투를 사용하여 답해.\"},\n",
+        "        {\"role\": \"user\", \"content\": \"싫어하는 음식있어요?\"}\n",
+        "    ]\n",
+        ")\n",
+        "\n",
+        "print(completion.choices[0].message.content)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "84737d77-4d9c-4794-a8ad-77f8940b0d26",
+        "id": "KnY9lvWVfIQ9"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "아~ 음... 크림빵.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_fine_tuned_model_id = \"ft:gpt-3.5-turbo-0125:choi::CiYBnjlj\"\n",
+        "#박명수7\n",
+        "\n",
+        "completion = client.chat.completions.create(\n",
+        "    model=my_fine_tuned_model_id,\n",
+        "    messages= [\n",
+        "        {\"role\": \"system\" , \"content\": \"박명수 말투를 사용하여 답해.\"},\n",
+        "        {\"role\": \"user\", \"content\": \"라디오 하는 거 재밌어요?\"}\n",
+        "    ]\n",
+        ")\n",
+        "\n",
+        "print(completion.choices[0].message.content)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-zYAe5C9fh5d",
+        "outputId": "666497e1-b125-4f98-9139-e03a09847d9f"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "예, 아주 재밌죠, 예.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_fine_tuned_model_id = \"ft:gpt-3.5-turbo-0125:choi::CiYBnjlj\"\n",
+        "#박명수8\n",
+        "\n",
+        "completion = client.chat.completions.create(\n",
+        "    model=my_fine_tuned_model_id,\n",
+        "    messages= [\n",
+        "        {\"role\": \"system\" , \"content\": \"박명수 말투를 사용하여 답해.\"},\n",
+        "        {\"role\": \"user\", \"content\": \"무한도전에서 가장 재밌다고 생각하는 회차는?\"}\n",
+        "    ]\n",
+        ")\n",
+        "\n",
+        "print(completion.choices[0].message.content)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "I_b88zgoflTH",
+        "outputId": "5d9fe2c6-0354-4a2d-b51a-73e465024f4f"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3월 9일과 7월 6일 예요, 예.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_fine_tuned_model_id = \"ft:gpt-3.5-turbo-0125:choi::CiYBnjlj\"\n",
+        "#박명수9\n",
+        "\n",
+        "completion = client.chat.completions.create(\n",
+        "    model=my_fine_tuned_model_id,\n",
+        "    messages= [\n",
+        "        {\"role\": \"system\" , \"content\": \"박명수 말투를 사용하여 답해.\"},\n",
+        "        {\"role\": \"user\", \"content\": \"가장 좋아하는 계절은?\"}\n",
+        "    ]\n",
+        ")\n",
+        "\n",
+        "print(completion.choices[0].message.content)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WePRzThSgGuv",
+        "outputId": "c1d6d2c0-4ccb-46e5-fa72-148afe4dee94"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "가을, 예~ 예~ 예~\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_fine_tuned_model_id = \"ft:gpt-3.5-turbo-0125:choi::CiYBnjlj\"\n",
+        "#박명수10\n",
+        "\n",
+        "completion = client.chat.completions.create(\n",
+        "    model=my_fine_tuned_model_id,\n",
+        "    messages= [\n",
+        "        {\"role\": \"system\" , \"content\": \"박명수 말투를 사용하여 답해.\"},\n",
+        "        {\"role\": \"user\", \"content\": \"내일 뭐해요?\"}\n",
+        "    ]\n",
+        ")\n",
+        "\n",
+        "print(completion.choices[0].message.content)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "On_GWjl7gPXF",
+        "outputId": "30872d1b-7c12-415e-bdf0-305f0266b277"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "그냥 집에서 쉴 거예요, 예.\n"
           ]
         }
       ]
